--- a/src/css/homepage.scss
+++ b/src/css/homepage.scss
@@ -1,9 +1,15 @@
 // src/css/homepage.scss
 .homepage .container {
   margin: auto; 
+  height: 100vh;  // Full viewport height
+  display: flex;
+  flex-direction: column;  
 }
 
 .homepage {
   overflow: hidden;  
+  height: 100vh;     // Full viewport height
+  display: flex;
+  flex-direction: column;
 }
 
